--- a/Prompting_Character.ipynb
+++ b/Prompting_Character.ipynb
@@ -18,25 +18,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56838bb1-654e-461a-93f3-1460bd95ccdb",
-   "metadata": {},
-   "source": [
-    "# Install Prerequisite Libraries\n",
-    "The below code will depend on three Python \"libraries\" (software collections). Run the below cell once to install them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "269be1d0-9531-43eb-8a48-4b4b29a01951",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install requests pandas scikit-learn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d044b77d-8e22-4371-86b6-d98770674b28",
    "metadata": {},
    "source": [
@@ -112,45 +93,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Successfully loaded NarraDetect_Scalar.csv\n",
-      "Shape: 394 rows, 35 columns\n",
+      "✅ Successfully loaded CharacterActions_Meta.csv\n",
+      "Shape: 30 rows, 6 columns\n",
       "\n",
       "Columns in this dataset:\n",
-      "- NARRATIVITY\n",
-      "- GENRE\n",
-      "- FILENAME\n",
-      "- TEXT\n",
-      "- AY_agency\n",
-      "- AY_event\n",
-      "- AY_world\n",
-      "- AY_overall\n",
-      "- ML_agency\n",
-      "- ML_event\n",
-      "- ML_world\n",
-      "- ML_overall\n",
-      "- LM_agency\n",
-      "- LM_event\n",
-      "- LM_world\n",
-      "- LM_overall\n",
-      "- avg_agency\n",
-      "- avg_event_seq\n",
-      "- avg_worldmaking\n",
-      "- avg_overall\n",
-      "- AvgDeviation\n",
-      "- Reader.Predicted.Label\n",
-      "- gpt.binary\n",
-      "- gpt.ordinal\n",
-      "- gpt.ordinal.mean\n",
-      "- svm.probability\n",
-      "- bert.probability\n",
-      "- longform.probability\n",
-      "- Llama.3.8B.ordinal\n",
-      "- Llama.3.8B.ordinal.mean\n",
-      "- Llama.3.8B.binary\n",
-      "- Llama.3.8B.fine.tuned.binary\n",
-      "- svm.binary\n",
-      "- bert.binary\n",
-      "- longform.binary\n"
+      "- file\n",
+      "- type\n",
+      "- token\n",
+      "- text\n",
+      "- Human_Label\n",
+      "- bookNLP_Label\n"
      ]
     }
    ],
@@ -158,7 +110,7 @@
     "########## CONFIGURATION VARIABLES ###########\n",
     "FILENAME = \"NarraDetect_Scalar.csv\"  # Your CSV filename here\n",
     "\n",
-    "## Define Function\n",
+    "## Define function\n",
     "import pandas as pd\n",
     "\n",
     "def load_csv(filename):\n",
@@ -176,7 +128,7 @@
     "   except Exception as e:\n",
     "       print(f\"❌ Error loading file: {str(e)}\")\n",
     "\n",
-    "## Run function\n",
+    "# Run Function\n",
     "df = load_csv(FILENAME)\n"
    ]
   },
@@ -192,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7651fd89-83d1-4e8c-a0c0-30d5b07d264a",
    "metadata": {},
    "outputs": [
@@ -201,22 +153,22 @@
      "output_type": "stream",
      "text": [
       "📊 Dataset Overview:\n",
-      "Total number of texts: 394\n",
+      "Total number of texts: 30\n",
       "\n",
       "📝 Text Length Statistics:\n",
-      "Shortest text: 16 words\n",
-      "Longest text: 444 words\n",
-      "Average length: 121.9 words\n",
-      "Median length: 111.0 words\n",
-      "Total words in dataset: 48,017 words\n",
+      "Shortest text: 10 words\n",
+      "Longest text: 89 words\n",
+      "Average length: 41.6 words\n",
+      "Median length: 38.0 words\n",
+      "Total words in dataset: 1,248 words\n",
       "\n",
       "📚 Here are 2 example texts from your data:\n",
       "Example 1:\n",
-      "Length: 187 words\n",
-      "Text: This was a history lesson under erasure that translated Stalinist mass violence into late-Soviet social discipline. A full explanation of Khrushchev’s speech and its aftermath and of the social processes surrounding the history and memory of Stalinist collective violence requires the articulation of novel theoretical positions. Analyses of legacies of mass historical violence in Europe and elsewhere typically cast the social arena as a battleground between memory and oblivion, projecting psychic mechanisms associated with the aftermath of trauma—most frequently those of repression and repetition compulsion—as metaphors for collective processes in which a society as a whole is conceived as repressing memory of past events, memory that must be brought to the fore if recovery and amelioration are to take place. Yet memory, forgetting, and repression are precisely the wrong terms for analysis of legacies of Stalinist mass violence in the USSR—and in present-day Russia as well. In this case, nothing is forgotten, and repression—with wooden clubs or exile to the camps—bears little resemblance to repression of traumatic suffering, in which the original perception of unimaginable events is thought to remain unassimilated by memory, an inaccessible lost experience.\n",
+      "Length: 19 words\n",
+      "Text: The beep followed . Jack Sr . adopted a light and airy tone that belied his true mood .\n",
       "Example 2:\n",
-      "Length: 284 words\n",
-      "Text: The text articulates for the Duchess “a world of her own invention,” but only out of or in relation to the common words, images, and knowledge of Cavendish’s seventeenth-century England, the world of “sensitive and rational self-moving matter” that Cavendish envisioned the earth to be. Crucially, the Duchess does not choose to make a world of philosophy or of abstracted forms, symbols, or ideas like the models she rejects, but instead a world of anthropomorphized matter, a foundational quality that renders humans and nature of the same cloth. As with all science fiction, the fantastical worlds constructed in one’s imagination only become coherent when expressed in fragments of common knowledge: Huxley’s flying cars in Brave New World are cars nevertheless, just like the purplish complexions of the beast-men in the Blazing World are only comprehensible to the Empress in terms of the skin colors of her native world. That the semiotics of science fiction works this way is not new; but that Cavendish chooses anthropomorphism in The Blazing World (and in Observations) as a distinct method for acknowledging and describing the ways in which nature is already animated is highly relevant to our contemporary studies of both the Anthropocene and Cavendish. Though one of the most formidable challenges for natural philosophers in Cavendish’s early modern England was to systematize experimentation such that experimental science could more reliably earn Sprat’s rhetorical claim to “Real Knowledge,” perhaps one of the most formidable challenges of the Anthropocene age is to rethink the kind of “Real Knowledge” that positions nature as an inanimate object in relation to the human subject, and thus to learn how to articulate our world as animated with us, not in opposition to us.\n"
+      "Length: 48 words\n",
+      "Text: I know she ’s playing a game with me , but I do n’t know the rules , and she ’s got all the cards . Still , the hell with it — I just ca n’t find it in me to care that I ’m losing .\n"
      ]
     }
    ],
@@ -227,6 +179,7 @@
     "\n",
     "########## FUNCTION DEFINITION ###########\n",
     "def text_stats(df, text_column=TEXT_COLUMN, num_examples=NUM_EXAMPLES):\n",
+    "\n",
     "   \"\"\"Display text statistics and examples\"\"\"\n",
     "   # Calculate word counts\n",
     "   word_counts = df[text_column].str.split().str.len()\n",
@@ -274,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "543dd310-844d-42b0-a033-0c37043e85d3",
    "metadata": {
     "scrolled": true
@@ -307,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "d1f826ab-394d-47e1-8467-1457a56d53f8",
    "metadata": {},
    "outputs": [
@@ -317,10 +270,10 @@
      "text": [
       "\n",
       "📖 SAMPLE PASSAGE:\n",
-      "Then did he become buoyant, elastic, gaily “tripping the light fantastic toe” around the piazza and all thorough the house. Tibeats, at the time of my sale, had informed him I could play on the violin. He had received his information from Ford. Through the importunities of Mistress Epps, her husband had been induced to purchase me one during a visit to New-Orleans. Frequently I was called into the house to play before the family, mistress being passionately fond of music.\n",
+      "Now she is not part of the year beginning . She has no job , she has enough money and nothing to do except this thing she lays upon herself , the commission , on which , she believes , rides her only hope of fashioning a life .\n",
       "\n",
       "🤖 MODEL RESPONSE:\n",
-      "Yes\n"
+      "COG\n"
      ]
     }
    ],
@@ -334,8 +287,9 @@
     "MODEL_NAME = model \n",
     "COLUMN_NAME = \"TEXT\"   # Change dataframe column name here\n",
     "PROMPT_TEMPLATE = \"Is this passage from a story? Answer yes or no {text}\" #Change your prompt here\n",
-    "STRUCTURED = False\n",
     "LABELS = [\"Yes\", \"No\"]\n",
+    "\n",
+    "## Define function\n",
     "\n",
     "def query_ollama(text):\n",
     "    \"\"\"Query local ollama model with text\"\"\"\n",
