--- a/Prompting_01.ipynb
+++ b/Prompting_01.ipynb
@@ -462,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(sample_df[[COLUMN_NAME, MODEL_NAME]].head(5))"
+    "print(sample_df[[COLUMN_NAME, MODEL_NAME]].head(3))"
    ]
   },
   {
@@ -773,7 +773,7 @@
    "id": "f03c8ff0-bcc6-4ea6-a4af-d5ac7e08ac8b",
    "metadata": {},
    "source": [
-    "# Calculate Precision, Recall, and F1 Score\n",
+    "# 17. Calculate Precision, Recall, and F1 Score\n",
     "\n",
     "These are measures of agreement we will use this semester to see how well a model + prompt performs. Make sure to adjust the variables at the beginning to match your goals."
    ]
@@ -788,12 +788,12 @@
     "########## CONFIGURATION VARIABLES ###########\n",
     "# Define your reference column and positive class\n",
     "REFERENCE_COLUMN = \"Reader.Predicted.Label\"  # Column with reference labels\n",
-    "POSITIVE_CLASS = 1                          # Value that represents the positive class, i.e. the one you want to measure\n",
+    "POSITIVE_CLASS = 1           # Value that represents the positive class, i.e. the one you want to measure\n",
     "\n",
     "########## CALCULATE METRICS ###########\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "\n",
-    "def calculate_metrics(df, model_column=MODEL_NAME, reference_column=REFERENCE_COLUMN, positive_class=POSITIVE_CLASS):\n",
+    "def calculate_metrics(df, model_column=MODEL_NAME, reference_column=REFERENCE_COLUMN, positive_class=POSITIVE_CLASS, num_classes=None):\n",
     "    \"\"\"\n",
     "    Calculate precision, recall, and F1 score for model predictions\n",
     "    \n",
@@ -807,6 +807,8 @@
     "        Name of the column containing reference labels\n",
     "    positive_class : int or str\n",
     "        Value that represents the positive class in your data\n",
+    "    num_classes : int, optional\n",
+    "        Number of classes in the classification task. If None, will prompt user for input.\n",
     "    \"\"\"\n",
     "    # Get the cleaned model column name\n",
     "    model_cleaned = f\"{model_column}_cleaned\"\n",
@@ -815,21 +817,36 @@
     "    y_true = df[reference_column]\n",
     "    y_pred = df[model_cleaned]\n",
     "    \n",
+    "    # Determine averaging method\n",
+    "    if num_classes is None:\n",
+    "        # Ask for number of classes if not provided\n",
+    "        num_classes = int(input(\"Enter the number of classes (2 for binary, >2 for multi-class): \"))\n",
+    "    \n",
     "    # Calculate metrics\n",
-    "    precision = precision_score(y_true, y_pred, pos_label=positive_class)\n",
-    "    recall = recall_score(y_true, y_pred, pos_label=positive_class)\n",
-    "    f1 = f1_score(y_true, y_pred, pos_label=positive_class)\n",
+    "    if num_classes == 2:\n",
+    "        precision = precision_score(y_true, y_pred, pos_label=positive_class)\n",
+    "        recall = recall_score(y_true, y_pred, pos_label=positive_class)\n",
+    "        f1 = f1_score(y_true, y_pred, pos_label=positive_class)\n",
+    "    else:\n",
+    "        precision = precision_score(y_true, y_pred, average='weighted')\n",
+    "        recall = recall_score(y_true, y_pred, average='weighted')\n",
+    "        f1 = f1_score(y_true, y_pred, average='weighted')\n",
     "    \n",
     "    # Print results\n",
-    "    print(f\"Metrics for {model_column} (positive class = {positive_class}):\")\n",
+    "    class_type = \"binary\" if num_classes == 2 else \"multi-class weighted\"\n",
+    "    print(f\"Metrics for {model_column} ({class_type}):\")\n",
     "    print(f\"Precision: {precision:.3f}\")\n",
     "    print(f\"Recall: {recall:.3f}\")\n",
     "    print(f\"F1 Score: {f1:.3f}\")\n",
     "    \n",
     "    # Print interpretation\n",
     "    print(\"\\nInterpretation:\")\n",
-    "    print(f\"- Precision {precision:.1%}: When the model predicts class {positive_class}, it is correct this fraction of the time\")\n",
-    "    print(f\"- Recall {recall:.1%}: Of all actual class {positive_class} instances, the model found this fraction\")\n",
+    "    if num_classes == 2:\n",
+    "        print(f\"- Precision {precision:.1%}: When the model predicts class {positive_class}, it is correct this fraction of the time\")\n",
+    "        print(f\"- Recall {recall:.1%}: Of all actual class {positive_class} instances, the model found this fraction\")\n",
+    "    else:\n",
+    "        print(f\"- Precision {precision:.1%}: Weighted average of precision across all classes\")\n",
+    "        print(f\"- Recall {recall:.1%}: Weighted average of recall across all classes\")\n",
     "    print(f\"- F1 Score {f1:.1%}: The harmonic mean of precision and recall\")\n",
     "\n",
     "# Calculate metrics\n",
@@ -841,7 +858,7 @@
    "id": "9fccdd3d-079c-4bc3-bf2f-778ad9552a30",
    "metadata": {},
    "source": [
-    "## Inspect errors\n",
+    "## 18. Inspect errors\n",
     "\n",
     "Your errors can take the form of false positives (e.g. when the model thinks a passage is a story but isn't) or false negatives (e.g. when your model thinks the passage isn't a story but is)."
    ]
@@ -849,13 +866,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699ed179-366a-49b5-a221-0fa5856a89af",
+   "id": "0d2f4d71-ab5c-4ee4-b4df-a49501f6d7be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_error_examples(df, model_column=MODEL_NAME, reference_column=REFERENCE_COLUMN, text_column='TEXT'):\n",
+    "########## CONFIGURATION VARIABLES ###########\n",
+    "TEXT_COLUMN = \"TEXT\"\n",
+    "\n",
+    "def show_error_examples(df, model_column=MODEL_NAME, reference_column=REFERENCE_COLUMN, text_column=TEXT_COLUMN):\n",
     "    \"\"\"\n",
-    "    Display examples of false positives and false negatives with their corresponding text passages\n",
+    "    Display examples of misclassifications for each class\n",
     "    \n",
     "    Parameters:\n",
     "    -----------\n",
@@ -873,68 +893,36 @@
     "    \n",
     "    # Get unique values from reference column (sorted to ensure consistent order)\n",
     "    unique_labels = sorted(df[reference_column].unique())\n",
+    "    num_classes = len(unique_labels)\n",
     "    \n",
-    "    if len(unique_labels) != 2:\n",
-    "        print(f\"Error: Expected binary classification with 2 classes, but found {len(unique_labels)} classes.\")\n",
-    "        return\n",
+    "    print(f\"Found {num_classes} classes: {unique_labels}\")\n",
+    "    \n",
+    "    # For each class, show examples where the model predicted incorrectly\n",
+    "    for true_class in unique_labels:\n",
+    "        print(f\"\\n{'='*20} MISCLASSIFICATIONS FOR CLASS {true_class} {'='*20}\")\n",
     "        \n",
-    "    positive_class = unique_labels[1]  # Usually 1 or positive class\n",
-    "    negative_class = unique_labels[0]  # Usually 0 or negative class\n",
-    "    \n",
-    "    # Find false positives (predicted positive when actually negative)\n",
-    "    false_positives = df[\n",
-    "        (df[pred_col] == positive_class) & \n",
-    "        (df[reference_column] == negative_class)\n",
-    "    ]\n",
-    "    \n",
-    "    # Find false negatives (predicted negative when actually positive)\n",
-    "    false_negatives = df[\n",
-    "        (df[pred_col] == negative_class) & \n",
-    "        (df[reference_column] == positive_class)\n",
-    "    ]\n",
-    "    \n",
-    "    # Display one example of each if available\n",
-    "    print(f\"=== FALSE POSITIVE EXAMPLE ===\")\n",
-    "    print(f\"(Model incorrectly predicted {positive_class} when true label was {negative_class})\")\n",
-    "    if len(false_positives) > 0:\n",
-    "        fp_example = false_positives.sample(1).iloc[0]\n",
-    "        print(f\"\\nPassage:\")\n",
-    "        print(fp_example[text_column])\n",
-    "        print(f\"\\nModel response (original):\")\n",
-    "        print(fp_example[model_column])\n",
-    "        print(f\"Model response (cleaned):\")\n",
-    "        print(fp_example[pred_col])\n",
-    "        print(f\"True label:\")\n",
-    "        print(fp_example[reference_column])\n",
-    "    else:\n",
-    "        print(\"No false positives found!\")\n",
+    "        # Get cases where true label was this class but model predicted wrong\n",
+    "        misclassified = df[\n",
+    "            (df[reference_column] == true_class) & \n",
+    "            (df[pred_col] != true_class)\n",
+    "        ]\n",
     "        \n",
-    "    print(f\"\\n=== FALSE NEGATIVE EXAMPLE ===\")\n",
-    "    print(f\"(Model incorrectly predicted {negative_class} when true label was {positive_class})\")\n",
-    "    if len(false_negatives) > 0:\n",
-    "        fn_example = false_negatives.sample(1).iloc[0]\n",
-    "        print(f\"\\nPassage:\")\n",
-    "        print(fn_example[text_column])\n",
-    "        print(f\"\\nModel response (original):\")\n",
-    "        print(fn_example[model_column])\n",
-    "        print(f\"Model response (cleaned):\")\n",
-    "        print(fn_example[pred_col])\n",
-    "        print(f\"True label:\")\n",
-    "        print(fn_example[reference_column])\n",
-    "    else:\n",
-    "        print(\"No false negatives found!\")\n",
+    "        if len(misclassified) > 0:\n",
+    "            # Get one random example\n",
+    "            example = misclassified.sample(1).iloc[0]\n",
+    "            print(f\"\\nTrue label: {true_class}\")\n",
+    "            print(f\"Model predicted: {example[pred_col]}\")\n",
+    "            print(f\"\\nPassage:\")\n",
+    "            print(example[text_column])\n",
+    "        else:\n",
+    "            print(f\"No misclassifications found for class {true_class}!\")\n",
+    "        \n",
+    "        # Print a separator for readability\n",
+    "        print(f\"\\n{'-'*60}\")\n",
     "\n",
     "# Show error examples\n",
     "show_error_examples(sample_df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adca4e67-fe46-488b-8fb9-b8bcf14c2983",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
